src/tests/snapshots/eventql_parser__tests__parser__parse_from_events_nested_data.snap
---
source: src/tests/parser.rs
expression: "parse(&mut arena, tokens.as_slice()).map(|q| q.view(&arena))"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate:
    attrs:
      pos:
        line: 2
        col: 7
    value:
      Binary:
        lhs:
          attrs:
            pos:
              line: 2
              col: 7
          value:
            Access:
              target:
                attrs:
                  pos:
                    line: 2
                    col: 7
                value:
                  Access:
                    target:
                      attrs:
                        pos:
                          line: 2
                          col: 7
                      value:
                        Id: e
                    field: data
              field: price
        operator: Gt
        rhs:
          attrs:
            pos:
              line: 2
              col: 22
          value:
            Number: 20
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 3
        col: 14
    value:
      Record:
        - attrs:
            pos:
              line: 3
              col: 16
          name: id
          value:
            attrs:
              pos:
                line: 3
                col: 20
            value:
              Access:
                target:
                  attrs:
                    pos:
                      line: 3
                      col: 20
                  value:
                    Id: e
                field: id
        - attrs:
            pos:
              line: 3
              col: 26
          name: price
          value:
            attrs:
              pos:
                line: 3
                col: 33
            value:
              Access:
                target:
                  attrs:
                    pos:
                      line: 3
                      col: 33
                  value:
                    Access:
                      target:
                        attrs:
                          pos:
                            line: 3
                            col: 33
                        value:
                          Id: e
                      field: data
                field: price
  distinct: false
  meta: ~
