src/tests/snapshots/eventql_parser__tests__parser__parser_from_events_with_distinct.snap
---
source: src/tests/parser.rs
expression: "parse(&mut arena, tokens.as_slice()).map(|q| q.view(&arena))"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate:
    attrs:
      pos:
        line: 2
        col: 7
    value:
      Binary:
        lhs:
          attrs:
            pos:
              line: 2
              col: 7
          value:
            Access:
              target:
                attrs:
                  pos:
                    line: 2
                    col: 7
                value:
                  Access:
                    target:
                      attrs:
                        pos:
                          line: 2
                          col: 7
                      value:
                        Id: e
                    field: data
              field: price
        operator: Gt
        rhs:
          attrs:
            pos:
              line: 2
              col: 22
          value:
            Number: 20
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 3
        col: 23
    value:
      Record:
        - attrs:
            pos:
              line: 3
              col: 25
          name: id
          value:
            attrs:
              pos:
                line: 3
                col: 29
            value:
              Access:
                target:
                  attrs:
                    pos:
                      line: 3
                      col: 29
                  value:
                    Id: e
                field: id
        - attrs:
            pos:
              line: 3
              col: 35
          name: price
          value:
            attrs:
              pos:
                line: 3
                col: 42
            value:
              Access:
                target:
                  attrs:
                    pos:
                      line: 3
                      col: 42
                  value:
                    Access:
                      target:
                        attrs:
                          pos:
                            line: 3
                            col: 42
                        value:
                          Id: e
                      field: data
                field: price
  distinct: true
  meta: ~
