src/tests/snapshots/eventql_parser__tests__parser__parser_invalid_type_conversion_expr.snap
---
source: src/tests/parser.rs
expression: query.map(|q| q.view(&session.arena))
---
Err:
  Parser:
    ExpectedType:
      - 3
      - 37
