src/tests/snapshots/eventql_parser__tests__parser__parser_order_by_no_ordering.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by: ~
  order_by:
    expr:
      attrs:
        pos:
          line: 2
          col: 10
      value:
        Access:
          target:
            attrs:
              pos:
                line: 2
                col: 10
            value:
              Access:
                target:
                  attrs:
                    pos:
                      line: 2
                      col: 10
                  value:
                    Id: e
                field: data
          field: price
    order: Asc
  limit: ~
  projection:
    attrs:
      pos:
        line: 3
        col: 14
    value:
      Id: e
  distinct: false
  meta: ~
